# othello

./: .gitignore  circuit.py  explore.ipynb  explore.py  magic_tensor.py  makefile  plotly_utils.py  plotting.py  probe_training.py  probes.py  pyproject.toml  tests.py  utils.py
data/: stats.pt
probes/: main_linear_probe.pt  orthogonal_probe.pt  orthogonal_probe_2.pt
